# Ros-bots

Final_pkg/: Gripper_code.ino
src/Ball_follow_pkg/: setup.py
src/Ball_follow_pkg/lab3_3/: mode_input_node.py
src/Ball_follow_pkg/launch/: lab3_3_launch.py
src/Final_pkg/: Gripper_12_16_25.ino  package.xml  setup.cfg  setup.py
src/Final_pkg/Final_pkg/: FSM.py  Mode.py  filter.py  follow_ball_controller.py  gripper_keyboard_node.py  gripper_serial_node.py  image_info.py
src/Final_pkg/launch/: Final_launch.py
src/abot_01_pkg/: package.xml  setup.py
src/abot_01_pkg/abot_01_pkg/: FSM.py  Mode.py  filter.py  follow_ball_controller.py  image_info.py  square_distance.py
src/abot_01_pkg/launch/: FSM_launch.py  convert_launch  convert_launch.py  follow_ball_launch.py  move_square_launch.py  (+2 more)
src/color_filter_pkg/: setup.cfg  setup.py
src/gripper_control_pkg/: package.xml  setup.cfg  setup.py
src/gripper_control_pkg/gripper_control_pkg/: gripper_keyboard_node.py
src/gripper_control_pkg/launch/: gc_launch.py
src/odometry_pkg/: setup.py
src/pickup_delivery_pkg/: package.xml  setup.cfg  setup.py
src/pickup_delivery_pkg/launch/: pd_launch.py
src/pickup_delivery_pkg/pickup_delivery_pkg/: gripper_node.py  gripper_teleop_node.py  hsv_detector_node.py  hsv_node.py  mode_input_node.py  pd_fsm_node.py
src/pid_pkg/: setup.cfg
unused_packages/Ball_follow_pkg/: package.xml  setup.cfg  setup.py
unused_packages/color_filter_pkg/: package.xml
unused_packages/moali_pkg/: setup.cfg  setup.py
unused_packages/odometry_pkg/: package.xml
unused_packages/pid_pkg/: package.xml  setup.py
(+21 files in other folders)
