<?xml version="1.0"?>
<package format="3">
  <name>pickup_delivery_pkg</name>
  <version>0.0.1</version>
  <description>Pickup &amp; delivery robot: HSV markers + FSM + Arduino gripper</description>
  <maintainer email="sudhi@todo.todo">sudhi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <exec_depend>python3-serial</exec_depend>
</package>
